# rig-llama-cpp

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  run_tests.sh
.github/workflows/: ci.yml
examples/: completion.rs  embeddings.rs  kv_cache.rs  reload.rs  stream_chat.rs  stream_chat_tools.rs  streaming.rs  structured_output.rs  vision.rs
examples/helper/: stream_out.rs  time.rs
src/: checkpoint.rs  client.rs  embedding.rs  error.rs  image.rs  lib.rs  loader.rs  parsing.rs  prompt.rs  request.rs  sampling.rs  slot.rs  test.rs  types.rs  worker.rs
tests/e2e/: common.rs  embedding.rs  gemma.rs  main.rs  qwen.rs  reload.rs
