[package]
name = "rig-llama-cpp"
version = "0.1.0"
edition = "2024"

[features]
default = ["vulkan"]
openmp = ["llama-cpp-2/openmp"]
vulkan = ["llama-cpp-2/vulkan"]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
rocm = ["llama-cpp-2/rocm"]
mtmd = ["llama-cpp-2/mtmd", "dep:base64"]

[dependencies]
rig-core = "0.32.0"
llama-cpp-2 = { version = "0.1.138" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
encoding_rs = "0.8"
thiserror = "2.0.18"
chrono = "0.4.44"
tokio-stream = "0.1"
base64 = { version = "0.22", optional = true }